# boris

./: Cargo.toml  README.md
input/: point.toml  scan.toml
src/: integrator.rs  lib.rs  resummator.rs
